# maths

./: .gitignore  LICENSE  README.org  maths.cabal  package.yaml
src/: Lib.hs  Maths.hs  PairWise.hs
test/: Spec.hs
